[project]
name = "testbin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Binh Vu", email = "binh@toan2.com" }]
requires-python = ">=3.14"
dependencies = ["testlib"]

[project.scripts]
testbin = "testbin:main"

[tool.uv.sources]
testlib = { path = "../test-lib", editable = true }

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
